--- a/index_handlebars.html
+++ b/index_handlebars.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
+		<script type="text/javascript" src="js/handlebars.js" /></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
