--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 				<span>Анкета</span><br>
 				ШРИ 2013
 			</div>
-			
+			<form action="action.php" method="post" enctype="multipart/form-data" name="myForm">
 			<div class="item">
-				<div class="number">1.</div>
+				<div class="left number">1.</div>
 				<div class="content">
 					<span class="text">Год рождения.</span>
 					<textarea data-amount="4"></textarea>
@@ -24,7 +24,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">2.</div>
+				<div class="left number">2.</div>
 				<div class="content">
 					<span class="text">Город, в котором вы живёте.</span>
 					<textarea data-amount="4"></textarea>
@@ -34,7 +34,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">3.</div>
+				<div class="left number">3.</div>
 				<div class="content">
 					<span class="text">Вуз, факультет, специальность, кафедра.</span>
 					<textarea data-amount="4"></textarea>
@@ -44,7 +44,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">4.</div>
+				<div class="left number">4.</div>
 				<div class="content">
 					<span class="text">Год окончания вуза.</span>
 					<textarea data-amount="4"></textarea>
@@ -54,7 +54,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">5.</div>
+				<div class="left number">5.</div>
 				<div class="content">
 					<div class="text">Уровень владения английским языком:</div>
 					<p><input type="checkbox"><label> начальный;</label></p>
@@ -67,7 +67,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">6.</div>
+				<div class="left number">6.</div>
 				<div class="content">
 					<span class="text">Чего вы ожидаете от участия в Школе?</span>
 					<textarea data-amount="4"></textarea>
@@ -77,7 +77,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">7.</div>
+				<div class="left number">7.</div>
 				<div class="content">
 					<span class="text">Откуда вы о нас узнали?</span>
 					<textarea data-amount="4"></textarea>
@@ -87,7 +87,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">8.</div>
+				<div class="left number">8.</div>
 				<div class="content">
 					<span class="text">Сколько времени вы были бы готовы уделять стажировке или работе в Яндексе?</span>
 					<textarea data-amount="4"></textarea>
@@ -97,7 +97,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">9.</div>
+				<div class="left number">9.</div>
 				<div class="content">
 					<span class="text">Расскажите о вашем опыте разработки. Нам будет интересно всё — как серьезный интерфейс, так и просто домашняя страничка.</span>
 					<textarea data-amount="4"></textarea>
@@ -107,7 +107,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">10.</div>
+				<div class="left number">10.</div>
 				<div class="content">
 					<span class="text">Если вы где-нибудь работали, расскажите, какие у вас были должностные обязанности и был ли опыт работы в команде.</span>
 					<textarea data-amount="4"></textarea>
@@ -117,7 +117,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">11.</div>
+				<div class="left number">11.</div>
 				<div class="content">
 					<span class="text">Перечислите, какими программными продуктами вы пользуетесь в своей работе — от редактора до специализированных утилит (Intellij Idea, Node.js, Uglify.js, GNU Make). Для каждого инструмента укажите, какие задачи вы с помощью него решаете и почему выбрали именно его.</span>
 					<textarea data-amount="4"></textarea>
@@ -127,7 +127,7 @@
 			</div>
 			
 			<div class="item">
-				<div class="number">12.</div>
+				<div class="left number">12.</div>
 				<div class="content">
 					<span class="text">Пользуетесь ли вы командной строкой? Какими командами вы пользуетесь и какие задачи вы решаете с их помощью? С какими программами вы преимущественно или полностью взаимодействуете через интерфейс командной строки?</span>
 					<textarea data-amount="4"></textarea>
@@ -137,7 +137,7 @@
 			</div>	
 			
 			<div class="item">
-				<div class="number">13.</div>
+				<div class="left number">13.</div>
 				<div class="content">
 					<div class="text">
 						<p>Напишите на JavaScript функцию, которая выводит список всех чисел, которые равны сумме факториалов своих цифр. Пример такого числа:</p>
@@ -151,7 +151,7 @@
 			</div>	
 			
 			<div class="item">
-				<div class="number">14.</div>
+				<div class="left number">14.</div>
 				<div class="content">
 					<div class="text">
 						<p>Вы — пилот грузового межгалактического корабля. Ваша работа — перевозка грузов с одной планету на другую. Грузоподъемность вашего корабля ограничена, поэтому за один рейс вы можете перевезти не более N кг полезного груза. Ваш корабль умеет сообщать свое состояние (местоположение и степень загруженности), а также летать в любую точку пространства. Каждая планета может содержать на себе груз, который можно взять. Также на каждой планете груз можно оставить.</p>
@@ -167,7 +167,7 @@
 			</div>	
 			
 			<div class="item">
-				<div class="number">15.</div>
+				<div class="left number">15.</div>
 				<div class="content">
 					<div class="text">
 						<p>Сверстайте форму-анкету с нашими заданиями для кандидатов. Страница должна работать в следующих браузерах: MSIE (8, 9, 10), Google Chrome (26, 27), Firefox (20, 21), Opera (12.15, 12.14), Яндекс.Браузер 1.5. По возможности используйте приёмы безопасной деградации CSS. Страница должна содержать интерактив, реализованный с помощью JS и jQuery. Это может быть:</p>
@@ -190,12 +190,69 @@
 					<div class="overlay"></div>
 				</div>
 				<a href="#" class="minimize up" title="Свернуть"></a>
-			</div>				
-			
+			</div>		
+					
 			<div class="progress-bar">
 				<div class="inner"></div>
 			</div>
-		
+			<div class="item">
+				<div class="line">
+					<div class="left">Резюме до 250 КБ</div>
+					<div class="content">
+						<span id="fileName"></span>
+						<div class="fileButton">
+								<div class="inner">Выбрать файл</div>
+								<input type="file" name="file" id="file">
+						</div>
+					</div>
+				</div>
+				<div class="line">
+					<div class="left">Ссылка на профиль в Моем Круге</div>
+					<div class="content">
+						<input type="text">
+					</div>
+				</div>
+				<div class="line">
+					<div class="left">Имя, Фамилия</div>
+					<div class="content">
+						<input type="text">
+					</div>
+				</div>
+				<div class="line">
+					<div class="left">Телефон</div>
+					<div class="content">
+						<input type="text">
+						<div class="hint">Пожалуйста, укажите код города</div>
+					</div>
+				</div>
+				<div class="line">
+					<div class="left">E-mail</div>
+					<div class="content">
+						<input name="email" type="email" required="required" data-message="Не заполнено поле 'E-mail'.">
+						<div class="hint"></div>
+					</div>
+				</div>
+				<div class="line">
+					<div class="left">Дополнительные сведения</div>
+					<div class="content">
+						<textarea name="about"></textarea>
+						<p>Откуда вы узнали о нашем предложении?</p>
+						<select class="required" data-message="Укажите, пожалуйста, откуда вы узнали о нашем предложении.">
+							<option value="select">Выбрать</option>
+							<option value="от HR-менеджера Яндекса">от HR-менеджера Яндекса</option>
+							<option value="Я.Субботник">Я.Субботник</option>
+							<option value="Yet another Conference">Yet another Conference</option>
+							<option value="на другой конференции">на другой конференции</option>
+							<option value="из поиска">из поиска</option>
+							<option value="по рекомендации">по рекомендации</option>
+							<option value="other">другое</option>
+						</select>
+						<div class="hint"></div>
+						<p><input type="checkbox" class="required" data-message="Подтвердите, пожалуйста, своё согласие на передачу анкеты с вашими персональными данными."><label class="important"> Я даю свое согласие на передачу в ООО «ЯНДЕКС» резюме и/или анкеты, содержащих мои персональные данные, и согласен с тем, что они будут храниться в ООО «ЯНДЕКС» в течение 5 лет и будут обрабатываться исключительно для целей предложения мне вакансий группы компаний «ЯНДЕКС», в соответствии с Федеральным законом «О персональных данных».</label><div class="hint"></div></p>
+					</div>
+				</div>
+			</div>
+			</form>
 		</div>
 	</body>
 </html>
