Добавление имени в label с соглашением

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 				<div class="line">
 					<div class="left">Имя, Фамилия</div>
 					<div class="content">
-						<input type="text" required="required">
+						<input type="text" name="who" required="required">
 					</div>
 				</div>
 				<div class="line">
@@ -249,7 +249,7 @@
 							<option value="other">другое</option>
 						</select>
 						<div class="hint"></div>
-						<p><input type="checkbox" class="required" data-message="Подтвердите, пожалуйста, своё согласие на передачу анкеты с вашими персональными данными."><label class="important"> Я даю свое согласие на передачу в ООО «ЯНДЕКС» резюме и/или анкеты, содержащих мои персональные данные, и согласен с тем, что они будут храниться в ООО «ЯНДЕКС» в течение 5 лет и будут обрабатываться исключительно для целей предложения мне вакансий группы компаний «ЯНДЕКС», в соответствии с Федеральным законом «О персональных данных».</label><div class="hint"></div></p>
+						<p><input type="checkbox" class="required" data-message="Подтвердите, пожалуйста, своё согласие на передачу анкеты с вашими персональными данными."><label class="important"> Я<span id="iam"></span> даю свое согласие на передачу в ООО «ЯНДЕКС» резюме и/или анкеты, содержащих мои персональные данные, и согласен с тем, что они будут храниться в ООО «ЯНДЕКС» в течение 5 лет и будут обрабатываться исключительно для целей предложения мне вакансий группы компаний «ЯНДЕКС», в соответствии с Федеральным законом «О персональных данных».</label><div class="hint"></div></p>
 					</div>
 				</div>
 			</div>
